--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
-VITE_GEMINI_API_KEY=your_gemini_api_key
+VITE_SUPABASE_URL=https://jgtvyfrchiutytvbiqbn.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_PX_sHaaEXcklndiHV6ihtA_SPtaA318
+VITE_GEMINI_API_KEY=AIzaSyCMv6ulzMgZuzU38pcPIcAGm6MdinefvLo
